PyMaker/datas/object2/RawHTML/i1301/Python_DOC_referPages.virtual-environment-is-not-working-in-django.txt
<div class="post-text" itemprop="text">
<p>I am deploying my Django app on digitalocean but I get an error after the giving the command in my terminal to migrate. Help me to figure out the error so that I can fix.</p>
<p><strong>terminal output</strong></p>
<pre><code>urban@ubuntu-s-1vcpu-1gb-blr1-01:~$ source bin/activate
(urban) urban@ubuntu-s-1vcpu-1gb-blr1-01:~$ cd lok
(urban) urban@ubuntu-s-1vcpu-1gb-blr1-01:~/lok$ python manage.py migrate
File "manage.py", line 14
) from exc
     ^
SyntaxError: invalid syntax
(urban) urban@ubuntu-s-1vcpu-1gb-blr1-01:~/lok$ ls
business    List     manage.py  news       sports             
templates
db.sqlite3  lokswar  movie      README.md  static_my_project
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Your version of Django requires Python 3, but it looks like <code>python</code> is <code>python2</code>, even after activating the virtual environment. You can use <code>which python</code> to check that <code>python</code> is pointing to the executable in your virtual environment.</p>
<p>If your virtual environment was created with python 2, then you'll have to <a href="https://docs.python.org/3/library/venv.html" rel="nofollow noreferrer">create a new virtual environment</a> that uses python 3.</p>
<pre><code>deactivate
python3 -m venv /path/to/urban.new
source /path/to/urban.new/bin/activate
# install requirements
</code></pre>
</div>
<span class="comment-copy">thanks it's worked</span>
